--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,9 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    
+    flex-direction: column;
+    align-items: center; 
   }
   
   .photo-grid-item {
