--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,15 @@
     justify-content: center;
     flex-wrap: wrap;
     
-    flex-direction: column;
+    flex-direction: row;
     align-items: center; 
+  }
+  .first-item {
+    order: 1;
+  }
+  
+  .last-item {
+    order: -1;
   }
   
   .photo-grid-item {
@@ -63,3 +70,9 @@
     width: 300px;
     height: 300px;
   }
+
+  .social,
+.subscribe {
+  align-self: flex-end;
+  margin-bottom: 20px;
+}
